second section added

--- a/index.html
+++ b/index.html
@@ -23,5 +23,25 @@
             <img src="./images/person/person-2.png" alt="">
         </div>
     </div>
+    <div class="second-section">
+        <h1 class="centered-heading">My Mission in <span class="colored-heading">2022</span> </h1>
+        <div class="section-box">
+            <div class="mission">
+                <img src="./images/illustrators/illustrator-1.png" alt="">
+                <h2>Mission</h2>
+                <p>My mission is becoming web Developer in next 6 month. i need to learn every thing about this as much as possible</p>
+            </div>
+            <div class="vission">
+                <img src="./images/illustrators/illustrator-2.png" alt="">
+                <h2>Vission</h2>
+                <p>I want to support myself and my family. with the remote or office job will do the better</p>
+            </div>
+            <div class="goal">
+                <img src="./images/illustrators/illustrator-3.png" alt="">
+                <h2>Goals</h2>
+                <p>My goal is to be the part of international software company. i want to be hired in web development industry</p>
+            </div>
+        </div>
+    </div>
 </body>
 </html>
