third section added

--- a/index.html
+++ b/index.html
@@ -28,19 +28,29 @@
         <div class="section-box">
             <div class="mission">
                 <img src="./images/illustrators/illustrator-1.png" alt="">
-                <h2>Mission</h2>
+                <h3>Mission</h3>
                 <p>My mission is becoming web Developer in next 6 month. i need to learn every thing about this as much as possible</p>
             </div>
-            <div class="vission">
+            <div class="vision">
                 <img src="./images/illustrators/illustrator-2.png" alt="">
-                <h2>Vission</h2>
-                <p>I want to support myself and my family. with the remote or office job will do the better</p>
+                <h3>Vision</h3>
+                <p>I want to support myself and my family. with the remote or office job will do the</p>
             </div>
             <div class="goal">
                 <img src="./images/illustrators/illustrator-3.png" alt="">
-                <h2>Goals</h2>
+                <h3>Goals</h3>
                 <p>My goal is to be the part of international software company. i want to be hired in web development industry</p>
             </div>
+        </div>
+    </div>
+    <div class="third-section">
+        <div class="left-side-third">
+            <img src="./images/pictures/coding.png" alt="">
+        </div>
+        <div class="right-side-third">
+            <h2>Develop <br> Without Limits</h2>
+            <p class="third-para">I need to practice more and more. so that i can able to make website easily. More practice makes a developer experienced. If i want to be good developer i need to practice. </p>
+            <button class="mission-btn">Read the Documentation</button>
         </div>
     </div>
 </body>
