fourth section added

--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
     <div class="first-section">
         <div class="left-side-first">
             <h1 class="bordered-heading">Stay Focused on <br> <span class="colored-heading">Mission 2022</span> </h1>
-            <p class="first-para"> In the beginning of a New Year!  2022 is here with all the promise and potential that every New Year provides us.  Of course, as with every New Year, there are many things that are beyond our control.  But it is important to focus on what we can control.  Among them are our attitudes, our conduct, our words, and our goals.</p>
+            <p class="text-para"> In the beginning of a New Year!  2022 is here with all the promise and potential that every New Year provides us.  Of course, as with every New Year, there are many things that are beyond our control.  But it is important to focus on what we can control.  Among them are our attitudes, our conduct, our words, and our goals.</p>
             <button class="mission-btn">Explore Now</button>
             <p>Scroll down to explore more about us</p>
         </div>
@@ -29,29 +29,40 @@
             <div class="mission">
                 <img src="./images/illustrators/illustrator-1.png" alt="">
                 <h3>Mission</h3>
-                <p>My mission is becoming web Developer in next 6 month. i need to learn every thing about this as much as possible</p>
+                <p>Your mission is becoming web Developer in next 6 month. You need to learn every thing about this as much as possible</p>
             </div>
             <div class="vision">
                 <img src="./images/illustrators/illustrator-2.png" alt="">
                 <h3>Vision</h3>
-                <p>I want to support myself and my family. with the remote or office job will do the</p>
+                <p>You need to consistently work on your development process to provide best service</p>
             </div>
             <div class="goal">
                 <img src="./images/illustrators/illustrator-3.png" alt="">
                 <h3>Goals</h3>
-                <p>My goal is to be the part of international software company. i want to be hired in web development industry</p>
+                <p>your goal is to be the part of international software company. If you want to be hired in web development industry you have to learn.</p>
             </div>
         </div>
     </div>
-    <div class="third-section">
-        <div class="left-side-third">
+<div class="third-section">
+        <div>
             <img src="./images/pictures/coding.png" alt="">
         </div>
         <div class="right-side-third">
             <h2>Develop <br> Without Limits</h2>
-            <p class="third-para">I need to practice more and more. so that i can able to make website easily. More practice makes a developer experienced. If i want to be good developer i need to practice. </p>
+            <p class="text-para">You need to practice more and more. so that you can able to make website easily. More practice makes a developer experienced. If you want to be good developer you need to practice again & again. </p>
             <button class="mission-btn">Read the Documentation</button>
         </div>
     </div>
+    <div class="fourth-section">
+        <div class="right-side-fourth">
+            <h2>Know our <br> Global Community </h2>
+            <p class="text-para">When you join a Global Developer Community, you'll have the opportunity to learn new skills in a variety of formats. You'll also meet local developers virtually or in person with similar interests in technology. The community prides itself on being an inclusive environment where everyone and anyone interested in tech—from beginner developers to experienced professionals—all are welcome to join. </p>
+            <button class="mission-btn">Read the Documentation</button>
+        </div>
+        <div>
+            <img src="./images/pictures/project.png" alt="">
+        </div>
+    </div>
+    
 </body>
 </html>
