fifth-section-added

--- a/index.html
+++ b/index.html
@@ -63,6 +63,22 @@
             <img src="./images/pictures/project.png" alt="">
         </div>
     </div>
-    
+    <div><h2 class="centered-heading">Details <span class="colored-heading">of Developer</span></h2></div>
+    <div class="fifth-section">
+        <div>
+            <img src="./images/person/person-0.png" alt="">
+        </div>
+        <div class="right-side-fifth">
+            <h2>I am <br> Sibli <span class="colored-heading">Sadik Rony</span></h2>
+            <h3>Wannabe Web Developer, Web Designer, SEO Expert</h3>
+            <p class="text-para">Congrats! You've just found your high-performance web developer! Need fixes or improvements on your existing project, migrating to a new platform or ready to start a new web project?</p>
+            <button class="mission-btn">Hire Me</button>
+            <button class="mission-btn">Download Resume</button>
+        </div>
+    </div>
+    <footer>
+        <h2>Mission <span class="colored-footer">2022</span></h2>
+        <p>Hard work, Perseverance, and Determination for 2022</p>
+    </footer>
 </body>
 </html>
